添加pay和candidate的构建脚本和docker文件
