# server/candidate/controller/api/v1/candidate.go
@@ -5,17 +5,18 @@ package v1
 
 import (
 	"candidate/controller"
+	"candidate/service"
 	"candidate/tools/message"
 	"common/tools/logging"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 )
 
 type candidateRecv struct {
-	Date        string   `json:"date" binding:"required"`         // 发车日期 yyyy-mm-dd
-	Time        string   `json:"time" binding:"required"`         // 发车时间 hh:mm
-	TrainNumber string   `json:"train_number" binding:"required"` // 车次
-	Passengers  []string `json:"passengers" binding:"required"`   // 乘客id
+	Date       string   `json:"date" binding:"required"`       // 发车日期 yyyy-mm-dd
+	TrainID    int      `json:"train_id" binding:"required"`   // 车次
+	Passengers []string `json:"passengers" binding:"required"` // 乘客id
 }
 
 type candidateSend struct {
@@ -27,7 +28,7 @@ type candidateSend struct {
 // @Description 发送需要候补的信息给服务器, 服务器将执行候补功能
 // @Accept json
 // @Produce json
-// @Param userID query string true "用户ID"
+// @Param userID query int true "用户ID"
 // @Param username query string true "用户名"
 // @Param wantPayR body v1.candidateRecv true "需要接受的信息"
 // @Success 200 {object} controller.JSONResult{data=v1.candidateSend} "返回成功"
@@ -42,7 +43,25 @@ func Candidate(c *gin.Context) {
 		send.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
 		return
 	}
-	// TODO 业务逻辑
+	userID, err := strconv.Atoi(c.Query("userID"))
+	if err != nil {
+		logging.Error(err)
+		send.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
+		return
+	}
+	canService, err := service.NewCandidateService()
+	if err != nil {
+		logging.Error(err)
+		send.Response(http.StatusOK, controller.NewJSONResult(message.ERROR, noData))
+		return
+	}
+	oosID, err := canService.CacheCandidate(userID, cr.TrainID, cr.Date, cr.Passengers)
+	if err != nil {
+		logging.Error(err)
+		send.Response(http.StatusOK, controller.NewJSONResult(message.ERROR, noData))
+		return
+	}
 	var cs candidateSend
+	cs.OrderOutsideID = oosID
 	send.Response(http.StatusOK, controller.NewJSONResult(message.OK, cs))
 }
