# server/candidate/router/router.go
@@ -11,14 +11,14 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// @title 支付服务
+// @title 候补服务
 // @version 1.0
 // @description 负责处理与支付和退款相关的业务
 
 // @contact.name LiuYong
 // @contact.email ly_yong@qq.com
 
-// @host localhost:8082
+// @host localhost:8102
 // @BasePath /candidate/api/v1
 // @query.collection.format multi
 func InitRouter() *gin.Engine {
@@ -27,6 +27,8 @@ func InitRouter() *gin.Engine {
 	apiV1 := r.Group("/candidate/api/v1")
 	{
 		apiV1.POST("/", v1.Candidate)
+		apiV1.POST("/cash", v1.Cash)
+		apiV1.POST("/state", v1.ReadState)
 	}
 	return r
 }
